[project]
name = "book-spy"
version = "0.0.0"
description = "Default template for PDM package"
authors = [
    {name = "NeLeGo", email = "152668670+NeLeGo@users.noreply.github.com"},
]
dependencies = ["playwright>=1.51.0"]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
